--- a/css/newStyles2.css
+++ b/css/newStyles2.css
@@ -61,7 +61,7 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #ffcccc;
+  --bs-body-color: #ffe6e4;
   --bs-body-bg: #50415D;
   --bs-border-width: 0.125rem;
   --bs-border-style: solid;
