--- a/css/newStyles2.css
+++ b/css/newStyles2.css
@@ -10934,7 +10934,7 @@ html {
     margin-top: 0;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
-    color: #50415D;
+    color: #FFFFFF;
     background: #FF412B;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
